# revm-sgx

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  run.sh
app/: Cargo.toml
crates/revm-runner/: Cargo.toml
crates/revm-runner/src/: lib.rs  utils.rs
enclave/: Cargo.toml  config.xml
enclave/src/: lib.rs  lib3.rs  runner.rs
enclave/src/models/: mod.rs
