[workspace]
resolver = "2"
members = ["bin/*", "crates/*"]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Automata Team"]
homepage = "https://www.ata.network/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
automata-sgx-sdk = { git = "https://github.com/automata-network/automata-sgx-sdk", branch = "main" }
automata-build-script = { git = "https://github.com/automata-network/automata-sgx-sdk", branch = "main" }
blst = { version = "=0.3.13" }

[patch.crates-io]
blst = { git = "https://github.com/automata-network/blst", branch = "teaclave_2.0_v0.3.13" }
