# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "server"
version = "1.0.0"
authors = ["The Teaclave Authors"]
edition = "2021"

[lib]
name = "server"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
sgx_types = { path = "../incubator-teaclave-sgx-sdk/sgx_types" }
sgx_libc = { path = "../incubator-teaclave-sgx-sdk/sgx_libc" }
structopt = "0.3"
thiserror = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1.0", features = ["macros", "net", "rt-multi-thread"] }
revm = { git = "https://github.com/automata-network/revm.git", branch = "v35-sgx", default-features = false, features = [
    "serde-json", "std", "ethersdb",
    "c-kzg",
    "secp256k1",
    "portable",
] }
alloy-rlp = { version = "0.3", default-features = false, features = [
    "arrayvec",
    "derive",
] }
hash-db = "0.15"
plain_hasher = "0.2"
triehash = "0.8"
walkdir = "2.5"
# indicatif = "0.17" # console-use, dep:libc
k256 = { version = "0.13.3", features = ["ecdsa"] }

[target.'cfg(not(target_vendor = "teaclave"))'.dependencies]
sgx_types = { path = "../incubator-teaclave-sgx-sdk/sgx_types" }
