[package]
name = "revm-runner"
version.workspace = true
edition.workspace = true

[lib]
name = "revm_runner"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
blst.workspace = true
serde.workspace = true
serde_json.workspace = true
automata-sgx-builder = { workspace = true, features = ["sgx_libc", "sgx_types"] }

structopt = "0.3"
thiserror = "1.0"
tokio = { version = "1.0", features = ["macros", "net", "rt-multi-thread"] }
revm = { version = "8.0.0", default-features = false, features = [
    "serde-json",
    "std",
    "ethersdb",
    "c-kzg",
    "secp256k1",
] }
alloy-rlp = { version = "0.3", default-features = false, features = [
    "arrayvec",
    "derive",
] }
hash-db = "0.15"
plain_hasher = "0.2"
triehash = "0.8"
walkdir = "2.5"
# indicatif = "0.17" # console-use, dep:libc
k256 = { version = "0.13.3", features = ["ecdsa"] }